--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </header>
     <section class="input-wrapper">
       <p>Qual seu país de origem?</p>
-      <input type="text" name="txt2" id="txt2">
-      <input type="button" value="Verificar" onclick="calcular()">
+      <input type="text" name="txt2" id="txt2" placeholder="Digite seu país aqui">
+      <input type="button" value="Verificar" onclick="calcular()" id="buttonInput">
     </section>
     <div id="res"></div>
     <div id="res2"></div>
